[package]
name = "qippy"
version = "0.0.1"
edition = "2018"
authors = ["Sebastian Dominguez<joburg1035@yahoo.com>"]
description = "A Quantum Circuits simulator library. Under development."
readme = "README.md"
repository = "https://github.com/SebastianDominguezC/qippy"
keywords = ["quantum", "simulation", "qubit"]
categories = ["simulation", "science"]
license = "MIT"

[dependencies]
num-complex = "0.4.0"
nalgebra = "0.30.0"